--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,15 @@
 /config/master.key
 
 config/database.yml
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
